--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -1,10 +1,10 @@
-name: documentation
+name: education
 
 on:
   pull_request:
-    branches: [documentation]
+    branches: [education]
   push:
-    branches: [documentation]
+    branches: [education]
 
 jobs:
   checks:
